DB Connection fixed